k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: wcassurl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: jwt
            port:
              number: 8002
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-management
            port:
              number: 8001
